# pixel-alchemy-studio

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py
src/graficador/: app.py  config.py  main.py
src/graficador/algorithms/: bezier.py  bresenham.py  dda.py  shapes.py
src/graficador/geometry/: point.py
src/graficador/ui/: button.py  canvas.py  controls.py
