[project]
name = "PixelAlchemy"
version = "0.1.0"
description = "PixelAlchemy Studio is an interactive 2D drawing application built with Python and Pygame, supercharged with Generative AI"
authors = [
    { name = "Jose Duarte", email = "josepipe0909@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" } 

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License", # Changed to Apache
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
]

dependencies = [
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "google-genai>=1.10.0", # Added based on README
    "python-dotenv>=1.0.0"  # Added based on README
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    # "mypy>=1.0.0", # Uncomment if you decide to use mypy
]

# Uncomment if you want to be able to install and then run 'graficador' from anywhere
# [project.scripts]
# graficador = "graficador.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --- Tool Configuration ---
[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking (if using type hints)
    "PTH", # flake8-use-pathlib
]
ignore = []
# exclude = [ ".venv", ... ] # Ruff excludes these by default

[tool.ruff.lint.isort]
known-first-party = ["graficador"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v -s --color=yes"
